@@ -12,7 +12,7 @@ class CVSError(common.WCError):
     pass
 
 
-def build_cvs_command(command, name, url, tag='', cvs_root=''):
+def build_cvs_command(command, name, url, tag='', cvs_root='', tag_file=None):
     """
     Create CVS commands.
 
@@ -30,6 +30,8 @@ def build_cvs_command(command, name, url, tag='', cvs_root=''):
         ['cvs', '-d', ':pserver:user@127.0.0.1:/repos', 'checkout', '-P', '-f', '-d', 'package.name', 'python/package.name']
         >>> build_cvs_command('status', 'package.name', 'python/package.name')
         ['cvs', '-q', '-n', 'update']
+        >>> build_cvs_command('tags', 'package.name', 'python/package.name', tag_file='setup.py')
+        ['cvs', '-Q', 'log', 'setup.py']
 
     """
     if command == 'status':
@@ -38,28 +40,41 @@ def build_cvs_command(command, name, url, tag='', cvs_root=''):
     cmd = ['cvs']
     if cvs_root:
         cmd.extend(['-d', cvs_root])
-    cmd.extend([command, '-P'])
-    if tag:
-        cmd.extend(['-r', tag])
-    else:
-        cmd.append('-f')
-    cmd.append('-d')
-    if command == 'checkout':
-        cmd.extend([name, url])
 
+    if command == 'tags':
+        cmd.extend(['-Q', 'log'])
+        if not tag_file:
+            tag_file = 'setup.py'
+        cmd.append(tag_file)
+    else:
+        cmd.extend([command, '-P'])
+        if tag:
+            cmd.extend(['-r', tag])
+        else:
+            cmd.append('-f')
+        cmd.append('-d')
+        if command == 'checkout':
+            cmd.extend([name, url])
     return cmd
 
 
 class CVSWorkingCopy(common.BaseWorkingCopy):
+
+    def __init__(self, source):
+        super(CVSWorkingCopy, self).__init__(source)
+        if self.source.get('newest_tag', '').lower() in ['1', 'true', 'yes']:
+            self.source['tag'] = self._get_newest_tag()
+
     def cvs_command(self, command, **kwargs):
         name = self.source['name']
         path = self.source['path']
         url = self.source['url']
         tag = self.source.get('tag')
-        cvs_root = self.source.get('cvs_root')
 
+        cvs_root = self.source.get('cvs_root')
+        tag_file = self.source.get('tag_file')
         self.output((logger.info, 'Running %s %r from CVS.' % (command, name)))
-        cmd = build_cvs_command(command, name, url, tag, cvs_root)
+        cmd = build_cvs_command(command, name, url, tag, cvs_root, tag_file)
 
         ## because CVS can not work on absolute paths, we must execute cvs commands
         ## in destination or in parent directory of destination
@@ -76,6 +91,8 @@ class CVSWorkingCopy(common.BaseWorkingCopy):
 
         if cmd.returncode != 0:
             raise CVSError('CVS %s for %r failed.\n%s' % (command, name, stderr))
+        if command == 'tags':
+            return self._format_tags_list(stdout)
         if kwargs.get('verbose', False):
             return stdout
 
@@ -153,3 +170,33 @@ class CVSWorkingCopy(common.BaseWorkingCopy):
             raise CVSError(
                 "Can't update package %r, because it's dirty." % name)
         return self.cvs_command('update', **kwargs)
+
+    def _format_tags_list(self, stdout):
+        output = []
+        tag_line_re = re.compile(r'([^: ]+): [0-9.]+')
+        list_started = False
+        for line in stdout.split('\n'):
+            if list_started:
+                matched = tag_line_re.match(line.strip())
+                if matched:
+                    output.append(matched.groups()[0])
+                else:
+                    list_started = False
+            elif 'symbolic names:' in line:
+                list_started = True
+        return list(set(output))
+
+    def _get_newest_tag(self):
+        try:
+            tags = self.cvs_command('tags')
+        except OSError:
+            return None
+        mask = self.source.get('newest_tag_prefix', self.source.get('newest_tag_mask', ''))
+        if mask:
+            tags = [t for t in tags if t.startswith(mask)]
+        tags = common.version_sorted(tags, reverse=True)
+        if not tags:
+            return None
+        newest_tag = tags[0]
+        self.output((logger.info, 'Picked newest tag for %r from CVS: %r.' % (self.source['name'], newest_tag)))
+        return newest_tag
