@@ -1,4 +1,5 @@
 from mr.developer import common
+import re
 import os
 import subprocess
 import sys
@@ -57,6 +58,9 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
                 rev = branch
         else:
             rev = rev or 'default'
+
+        if self.source.get('newest_tag', '').lower() in ['1', 'true', 'yes']:
+            rev = self._get_newest_tag() or rev
         return rev
 
     def _update_to_rev(self, rev):
@@ -73,13 +77,50 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
         self.output((logger.info, 'Switched %r to %s.' % (name, rev)))
         return stdout
 
+    def _get_tags(self):
+        path = self.source['path']
+        name = self.source['name']
+        env = dict(os.environ)
+        env.pop('PYTHONPATH', None)
+        try:
+            cmd = subprocess.Popen(['hg', 'tags'], cwd=path, env=env,
+                stdout=subprocess.PIPE, stderr=subprocess.PIPE)
+        except OSError:
+            return []
+        stdout, stderr = cmd.communicate()
+        if cmd.returncode:
+            raise MercurialError(
+                'hg update for %r failed.\n%s' % (name, stderr))
+
+        tag_line_re = re.compile(r'([^\s]+)[\s]*.*')
+
+        def get_tag_name(line):
+            matched = tag_line_re.match(line)
+            if matched:
+                return matched.groups()[0]
+
+        tags = (get_tag_name(line) for line in stdout.split("\n"))
+        return [tag for tag in tags if tag and tag != 'tip']
+
+    def _get_newest_tag(self):
+        mask = self.source.get('newest_tag_prefix', self.source.get('newest_tag_mask', ''))
+        name = self.source['name']
+        tags = self._get_tags()
+        if mask:
+            tags = [t for t in tags if t.startswith(mask)]
+        tags = common.version_sorted(tags, reverse=True)
+        if not tags:
+            return None
+        newest_tag = tags[0]
+        self.output((logger.info, 'Picked newest tag for %r from Mercurial: %r.' % (name, newest_tag)))
+        return newest_tag
+
     def hg_pull(self, **kwargs):
         # NOTE: we don't include the branch here as we just want to update
         # to the head of whatever branch the developer is working on
         # However the 'rev' parameter works differently and forces revision
         name = self.source['name']
         path = self.source['path']
-        rev = self.get_rev()
         self.output((logger.info, 'Updated %r with mercurial.' % name))
         env = dict(os.environ)
         env.pop('PYTHONPATH', None)
@@ -92,6 +133,8 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
             if 'no changes found' not in stdout:
                 raise MercurialError(
                     'hg pull for %r failed.\n%s' % (name, stderr))
+        #to find newest_tag hg pull is needed before
+        rev = self.get_rev()
         if rev:
             stdout += self._update_to_rev(rev)
         if kwargs.get('verbose', False):
